--- a/src/custom.scss
+++ b/src/custom.scss
@@ -4,14 +4,13 @@ $primary: #727271;
 $secondary: #21201f;
 $info: #ef6817;
 
+button {
+  width: 90%;
+}
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  font-size: medium;
+  font-family: "Helvetica", "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 // Import Bootstrap and its default variables
